--- a/mysite/food/item-form.html
+++ b/mysite/food/item-form.html
@@ -1,5 +1,8 @@
+{% extends 'food/base.html'% }
+{% block body %}
 <form methos="POST">
     {% csrf token %}
     {{form}}
     <button type="submit"></button>
 </form>
+{% endblock %}
